# gen_ai

./: README.md  concept.md  notes.md
agentic-ai/: .env.example  AGENT_NOTES.md  README.md  agentic-setup.sh  pyproject.toml
agentic-ai/agents/: agent_1_basic.py  agent_1_basic_vpre1.py  agent_2_multitool.py  agent_2_multitool.vpre1.py  agent_3_memory.py  agent_3_memory.vpre1.py  agent_4_langgraph.py  agent_4_langgraph.vpre1.py
agentic-ai/diagrams/: diagram_1_basic_agent.md  diagram_2_multitool_agent.md  diagram_3_memory_agent.md  diagram_4_multi_agent_system.md  diagram_5_workflow_sequence.md  diagram_6_learning_progression.md  diagram_7_supervisor_decision.md
kongsberg/: .gitignore  LICENSE  README.md  Stalwart Course Outline - AI Week - Agentic AI for Developers (6, 7 Feb).docx  main.py  pyproject.toml  rag-setup-js.sh  rag-setup-py.sh  setup.py
kongsberg/node-rag-demo/: .env.example  README.md  build-index.mjs  concept.md  package-lock.json  package.json  query-rag.mjs
kongsberg/py-rag-demo/: README.md  build_index.py  query_rag.py
kongsberg/slides/: Anatomy-Of-LLMs.pptx  GitHub Copilot Mastery.pptx  Multimodal-LLMs-Context-Engineering.pptx  RAG-Fundamentals.pptx  The-Generative-AI-Landscape.pptx
pdf-parser/: README.md  pdf_parser.py  test_pdf_parser.py
